# docrouter-demo

./: main.py  pyproject.toml  smoke.py
src/: api.py  db.py  pipeline.py  samples.py  setup.sh
src/core/: document.py  fields.py  grounding.py  schema.py  validators.py
src/llm/: client.py
static/: index.html
tests/: test_client.py  test_document.py  test_fields.py  test_grounding.py  test_pipeline.py  test_validators.py
