[project]
name = "docrouter-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.51.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
